--- a/report/casing.tex
+++ b/report/casing.tex
@@ -59,11 +59,14 @@ When building the third version on the 3D-printer the problems with the model co
 
 \subsection{Fourth revision}
 
-The fourth part has all the features and can hold all the electronics. It's been designed to hold the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the PCBs in the same enclosure. The acess panel has been placed at the underside of the model to get a better water seal.
-Due to the material cost and time it takes for the 3D printer to produce models the manufactured part has just some thin layers in the bottom part of the print.  
+The fourth revision has all the features and can hold all the electronics. It's been designed to hold the power switch in the front, the Time of Flight sensor on the top, the load cells, the batteries and both the PCBs in the same enclosure. The access panel has been placed at the underside of the model to get a better water seal. The access panel is a big plate covering the most part of the underside of the model. To ensure it's watertight there is a seal between the panel and the casing itself.
+Due to the material cost and time it takes for the 3D printer to produce models the manufactured part has just some thin layers in the bottom part of the print. To get the some strength in the model epoxy resin was mixed and poured in to both get the stability needed and a clear window for the Time of Flight sensor.
 
 \subsection{Results}
-The final version is the product of many revised and improved steps. The model holds all the electronics and sensors in the same enclosure and  
+The final version is the product of many revised and improved steps. The model holds all the electronics and sensors in the same enclosure and takes up as small physical space as possible. A 3D printer is used to produce the core structure and epoxy resin and some rubber is used to get the stiffness and water tight The final adjustmends made to the model inncludes a mountig solution for the 
+Time of Flight sensor, revised implementation of the pressure sensors, modified the PCB mountings, and small changes to 
+Problems :
+The pressure sensors is not entirely water sealed, some more work is needed in that area.  
 
 \subsubsection{The prototype}
 
