--- a/report/software_results.tex
+++ b/report/software_results.tex
@@ -1,2 +1,2 @@
 \subsection{Results}
-As mentioned the system consits of two part, the ARM MCU firmware and the Android application. Reading the sensor data in the ARM MCU was done with different frequencies depending on the type of sensor. This data was computed so that it would be easily interpreted by the Android application. Communicaion was done by the bluetooth Gatt protocol which allowed the data to be sent with unique service ids to identify what type of data was sent. This also made it possible for the data to be sent at different frequencies matching the sensor readings. The Android application was designed for simple usage and could only be connected to a device named SailorAid. For more flexible usage the feedback from the sensor reading could be aquired in multiple ways. The feedback could be received visually, by audio and by vibrations, it was also possible to close the screen and still be able to receive feedback. The logging of data was done at the same frequency as it was received by the bluetooth protocol. The resulting system was created for an easy to use experience that would effortlessly be turned on and connected.
+As mentioned the system consits of two part, the ARM MCU firmware and the Android application. Reading the sensor data in the ARM MCU is done with different frequencies depending on the type of sensor. This data is computed so that is easily interpreted by the Android application. Communicaion is done by the bluetooth Gatt protocol which allows the data to be sent with unique service ids to identify what type of data is sent. This also makes it possible for the data to be sent at different frequencies matching the sensor readings. The Android application is designed for simple usage and can only be connected to a device named SailorAid. For more flexible usage the feedback from the sensor reading can be aquired in multiple ways. The feedback can be received visually, by audio and by vibrations, it is also possible to close the screen and still be able to receive feedback. The logging of data is done at the same frequency as it is received by the bluetooth protocol. The resulting system is created for an easy to use experience that would effortlessly be turned on and connected.
