--- a/report/physics.tex
+++ b/report/physics.tex
@@ -7,7 +7,7 @@ A sailboat can achieve velocity by catching the wind in the sail at different an
 \item [Broad reach] (lift–drag) angle aound 135\degree
 \item [Running] (drag) angle around 180\degree
 \end{labeling}
-and are represented in Fig. \ref{points-sail}. A sailor wants to prevent the sail from luffing, luffing is when the sail starts to flap in the wind and no propulsive force is achieved. When the dinghy is in the close-hauled and beam reach state the sail produces lift force that is produced from the average pressure differences on the windward and leeward side of the sail where the pressure is higher on the windward surface thus acting like a wing propelling the dinghy. When the dinghy is in the broad reach state both lift and also drag propels the dinghy. Drag acts like a parachute that that catches the wind and propels the dinghy. The sideway force induced on the boat also introduces drift perpendicular to the relative bearing. This is counteracted by lowering a centerboard which also counteracts the dinghy from heeling.
+and are represented in Fig. \ref{points-sail}. A sailor wants to prevent the sail from luffing, luffing is when the sail starts to flap in the wind and no propulsive force is achieved. When the dinghy is in the close-hauled and beam reach state the sail produces lift force that is produced from the average pressure differences on the windward and leeward side of the sail where the pressure is higher on the windward surface thus acting like a wing, thus propelling the dinghy. When the dinghy is in the broad reach state both lift and also drag propels the dinghy. Drag acts like a parachute that catches the wind and propels the dinghy. The sideway force induced on the boat also introduces drift perpendicular to the relative bearing. This is counteracted by lowering a centerboard which also counteracts the dinghy from heeling.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{Figures/Points_of_sail.jpg}
